--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -17,7 +17,7 @@
         </a>
     </li>    
     <li class="nav-item" >
-        <a>
+        <a class="text-dark" href="https://github.com/jgomez-17/library-angular.git" target="_blank">
             <i class="fi fi-brands-github"></i>
         </a>
     </li>
