--- a/src/app/apicomponents/bookdetails/bookdetails.component.html
+++ b/src/app/apicomponents/bookdetails/bookdetails.component.html
@@ -1,4 +1,5 @@
-<ul class="nav bg-white justify-content-around d-flex fixed-top" style="margin-top: 4rem; padding-top: 1rem;">
+<!-- Barra de navegacion -->
+<ul class="nav bg-light justify-content-around d-flex fixed-top" style="margin-top: 3.5rem; padding-top: 1rem;">
     <li class="nav-item">
         <button class="rounded-circle" (click)="goBack()">
             <i class="fi fi-bs-angle-small-left" style="font-size: 1.5rem;"></i>
@@ -7,9 +8,12 @@
 
     <li class="nav-item" style="font-size: 1.3rem;">
         <a>
-            <button class="btn rounded-circle" role="button" data-bs-toggle="button" aria-pressed="false">
+            <button class="btn" (click)="toggleBookmark(bookDetails.id)"role="button" data-bs-toggle="button" aria-pressed="false">
                 <i class="fi fi-sr-heart"></i>
-            </button>
+                <div *ngIf="isBookmarked" class="bookmark-message">
+                    ¡Libro marcado como favorito!
+                </div>
+            </button> 
             <button class="btn rounded-circle" role="button" data-bs-toggle="button" aria-pressed="false">
                 <i class="fi fi-sr-comment-alt"></i>
             </button>
@@ -27,7 +31,7 @@
     </li>
 </ul>
 
-
+<!-- Contenido -->
 <div style="margin-top: 9rem;" *ngIf="bookDetails" class="book-details" [@zoomInOut]>
     <div>
         <img *ngIf="bookDetails.volumeInfo.imageLinks" [src]="bookDetails.volumeInfo.imageLinks.thumbnail" alt="{{ bookDetails.volumeInfo.title }}">
