--- a/src/app/apicomponents/googlebooks/googlebooks.component.html
+++ b/src/app/apicomponents/googlebooks/googlebooks.component.html
@@ -1,4 +1,5 @@
-<ul class="nav justify-content-around bg-white fixed-top navbar-light z-1">
+<!-- Barra de busqueda -->
+<ul class="nav justify-content-around bg-light fixed-top navbar-light z-1">
     <li class="nav-item">
         <div class="input-group bg-light rounded-pill">
           <input type="text" class="form-control" [(ngModel)]="searchQuery" placeholder="Search" (keyup.enter)="searchBooks()">
@@ -10,7 +11,7 @@
 </ul>
 
 
-<!-- book-list.component.html -->
+<!-- Lista de libros -->
 <div style="display: flex; width: 100%; justify-content: center;">
     <div class="books-container">
         <div *ngFor="let book of books" class="book">
