--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,23 +1,34 @@
-<ul class="nav justify-content-between bg-light fixed-top">
+<ul class="nav justify-content-between bg-dark fixed-top">
     <li class="nav-item">
-        <a class="btn btn-light" role="button" data-bs-toggle="dropdown" aria-expanded="false" aria-pressed="false">                    
+        <a class="btn btn-dark" role="button" data-bs-toggle="dropdown" aria-expanded="false" aria-pressed="false">                    
             <i class="fi fi-sr-apps"></i>
         </a>
         <ul class="dropdown-menu">
-            <li class="bg-white">
-                <a href="#"><i class="fi fi-rr-apps"></i></a>
+            <li class="bg-dark">
+                <a class="text-light" routerLink="/bookmarks">
+                    <i class="fi fi-sr-heart"></i>
+                    <p>favorites</p>
+                </a>
                 <a href="#"><i class="fi fi-rr-apps"></i></a>
                 <a href="#"><i class="fi fi-rr-apps"></i></a>
                 <a href="#"><i class="fi fi-rr-apps"></i></a>
             </li>
         </ul>
+        <a class="btn" routerLink="/googlebooks" role="button" aria-pressed="false">
+            <i class="fi fi-sr-home"></i> 
+        </a>
+        <a style="cursor: default; font-family: 'Fjalla One', sans-serif; margin-left: 1rem;" class="nav-link text-primary badge text-wrap"> 
+                NEPTUNO 
+            <span class="text-light"> 
+                LIBRARY 
+            </span>
+        </a>
     </li>
     <li>
-        <a class="nav-link text-dark badge"> NEPTUNO <span style="color: rgb(0, 85, 255);"> LIBRARY </span>
-        </a>
+        
     </li>    
     <li class="nav-item" >
-        <a class="text-dark" href="https://github.com/jgomez-17/library-angular.git" target="_blank">
+        <a style="margin-right: 1rem;" class="text-dark" href="https://github.com/jgomez-17/library-angular.git" target="_blank">
             <i class="fi fi-brands-github"></i>
         </a>
     </li>
