--- a/src/styles.css
+++ b/src/styles.css
@@ -15,6 +15,8 @@
 @import url('https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css'); /* instagram*/
 @import url('https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css'); /* facebook*/
 @import url('https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css'); /* email*/
+@import url('https://cdn-uicons.flaticon.com/uicons-solid-straight/css/uicons-solid-straight.css'); /* stark */
+@import url('https://cdn-uicons.flaticon.com/uicons-solid-straight/css/uicons-solid-straight.css'); /* eliminar */
 
 /* Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Abel&family=Bebas+Neue&family=Borel&family=PT+Sans&family=Roboto+Condensed:wght@300;400&family=Titillium+Web:wght@300;400&family=Ubuntu:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Abel&family=Bebas+Neue&family=Borel&family=Fjalla+One&family=PT+Sans&family=Roboto+Condensed:wght@300;400&family=Titillium+Web:wght@300;400&family=Ubuntu:wght@300&display=swap');
