--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -9,7 +9,10 @@
                     <i class="fi fi-sr-heart"></i>
                     <p>favorites</p>
                 </a>
-                <a href="#"><i class="fi fi-rr-apps"></i></a>
+                <a class="text-light" routerLink="/chatgpt">
+                    <i class="fi fi-sr-comment-alt"></i>
+                    <p>chat gpt</p>
+                </a>
                 <a href="#"><i class="fi fi-rr-apps"></i></a>
                 <a href="#"><i class="fi fi-rr-apps"></i></a>
             </li>
