--- a/src/styles.css
+++ b/src/styles.css
@@ -17,6 +17,9 @@
 @import url('https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css'); /* email*/
 @import url('https://cdn-uicons.flaticon.com/uicons-solid-straight/css/uicons-solid-straight.css'); /* stark */
 @import url('https://cdn-uicons.flaticon.com/uicons-solid-straight/css/uicons-solid-straight.css'); /* eliminar */
+@import url('https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css'); /* x-twiter */
+@import url('https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css'); /* shoping cart */
+
 
 /* Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Abel&family=Bebas+Neue&family=Borel&family=Fjalla+One&family=PT+Sans&family=Roboto+Condensed:wght@300;400&family=Titillium+Web:wght@300;400&family=Ubuntu:wght@300&display=swap');
