--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -13,8 +13,8 @@
                     <i class="fi fi-sr-comment-alt"></i>
                     <p>chat gpt</p>
                 </a>
-                <a href="#"><i class="fi fi-rr-apps"></i></a>
-                <a href="#"><i class="fi fi-rr-apps"></i></a>
+                <!-- <a href="#"><i class="fi fi-rr-apps"></i></a>
+                <a href="#"><i class="fi fi-rr-apps"></i></a> -->
             </li>
         </ul>
         <a class="btn" routerLink="/googlebooks" role="button" aria-pressed="false">
